<resources>
    <string name="app_name">BloodBank</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone">phone</string>
    <string name="password">password</string>
    <string name="remember">Remember</string>
    <string name="sign_up_from_here">Don\'t have account? You can sign up from HERE..</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="birth_date">birth date</string>
    <string name="last_donation_date">last donation date</string>
    <string name="phone_number">phone number</string>
    <string name="confirm_password">confirm password</string>
    <string name="register">Register</string>
    <string name="login">login</string>
    <string name="send">send</string>
    <string name="confirmation_code">confirmation code</string>
    <string name="new_password">new password</string>
    <string name="confirm_new_password">confirm new password</string>
    <string name="change">change</string>
    <string name="blood_type">Blood Type</string>
    <string name="government">Government</string>
    <string name="city">City</string>
    <string name="select_birth_date">Select Birth Date</string>
    <string name="select_last_donation_date">Select Last Donation Date</string>
    <string name="please_enter_phone_number">Please Enter phone number</string>
    <string name="posts">Posts</string>
    <string name="donations">Donations</string>
    <string name="max_notification">+9</string>
    <string name="create_new_account">Create new account</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit">Edit</string>
    <string name="error">error</string>
    <string name="error_inter_net">Error internet</string>
    <string name="notifications">Notifications</string>
    <string name="more">More</string>
    <string name="call">Call</string>
    <string name="age">age</string>
    <string name="bags_num">bags num</string>
    <string name="hospital">hospital</string>
    <string name="address">address</string>
    <string name="notes">notes</string>
    <string name="patient_name">patient name</string>
    <string name="api_key">AIzaSyDYRx3Js695lmwpCC5Ckib_36qOL7VVdqQ</string>
    <string name="posts_searching_keyword">Type searching keyword here..</string>
    <string name="categories">Categories</string>
    <string name="favorites">Favorites</string>
    <string name="contact_us">Contact us</string>
    <string name="about_app">About app</string>
    <string name="rate_app_on_store">Rate app on store</string>
    <string name="sign_out">Sign out</string>
    <string name="message_title">Message title</string>
    <string name="message_content">Message content</string>
    <string name="signed_out">Signed Out</string>
    <string name="notifications_settings">Notifications settings</string>
    <string name="save">save</string>
    <string name="wait">wait</string>
    <string name="notification_settings_title">Please select the governorates and blood types you want to be notified of their donations via notifications</string>
    <string name="posts_filter_missing_data">Please enter searching keyword, and select posts category!</string>
    <string name="hospital_address">hospital address</string>
    <string name="donation_request">Donation Request</string>
    <string name="select_address">Select Address</string>
    <string name="select_location">select location</string>
    <string name="hospital_name">hospital name</string>
    <string name="title_activity_maps">Map</string>
    <string name="current_location">Current Location</string>
    <string name="do_you_forget_password">Do you forget password?</string>
    <string name="description_here">Description here..</string>
    <string name="slide1_desc">The Blood Bank application aims to reduce the effort to search for blood donors so that it will be a platform for all donors to contribute to saving even one patient.</string>
    <string name="slide2_desc">Your blood donation contributes to saving a patient and revitalizing the immune system..</string>
    <string name="slide3_desc">We thank you for your generosity with your most valuable drops, blood drops, to revive unknown people to you who need blood drops to return to their lives.</string>



</resources>
