<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.homeCycle.ContactUsFragment"
    android:orientation="vertical"
    android:layout_marginStart="@dimen/dim_10dp"
    android:layout_marginEnd="@dimen/dim_10dp"
    android:gravity="center_horizontal">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:text="@string/phone"
                android:textSize="@dimen/dim_26sp"
                android:padding="@dimen/dim_8dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                style="@style/view"
                android:layout_marginTop="@dimen/dim_n_8dp"/>

            <TextView
                android:id="@+id/contact_us_fragment_tv_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dim_16sp"
                android:textColor="@color/orange"
                android:padding="@dimen/dim_8dp"
                android:drawablePadding="@dimen/dim_10dp"
                android:drawableStart="@drawable/ic_phone"
                android:drawableTint="@color/orange"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:text="@string/email"
                android:textSize="@dimen/dim_26sp"
                android:padding="@dimen/dim_8dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                style="@style/view"
                android:layout_marginTop="@dimen/dim_n_8dp"/>

            <TextView
                android:id="@+id/contact_us_fragment_tv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dim_16sp"
                android:textColor="@color/orange"
                android:padding="@dimen/dim_8dp"
                android:drawablePadding="@dimen/dim_10dp"
                android:drawableStart="@drawable/ic_email"
                android:drawableTint="@color/orange"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                style="@style/view"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_150dp"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/dim_15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dim_75dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/contact_us_fragment_iv_facebook"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_facebook"
                        android:clickable="true"/>

                    <ImageView
                        android:id="@+id/contact_us_fragment_iv_intsta"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:layout_weight="1"
                        android:src="@drawable/ic_insta"
                        android:clickable="true"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dim_75dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/contact_us_fragment_iv_twitter"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_twitter"
                        android:clickable="true"/>

                    <ImageView
                        android:id="@+id/contact_us_fragment_iv_youtube"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_youtube"
                        android:clickable="true"/>

                </LinearLayout>

            </LinearLayout>

            <EditText
                android:id="@+id/contact_us_fragment_et_msg_title"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_50dp"
                android:background="@drawable/shape_edit_text"
                android:layout_marginTop="@dimen/dim_15dp"
                android:hint="@string/message_title"
                android:textColor="@color/orange"
                android:textColorHint="@color/orange_transparent"
                android:paddingTop="@dimen/dim_10dp"
                android:paddingBottom="@dimen/dim_10dp"
                android:paddingEnd="@dimen/dim_15dp"
                android:paddingStart="@dimen/dim_15dp"/>

            <EditText
                android:id="@+id/contact_us_fragment_et_msg_content"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_150dp"
                android:background="@drawable/shape_edit_text"
                android:layout_marginTop="@dimen/dim_10dp"
                android:hint="@string/message_content"
                android:gravity="start"
                android:paddingTop="@dimen/dim_10dp"
                android:paddingBottom="@dimen/dim_10dp"
                android:paddingEnd="@dimen/dim_15dp"
                android:paddingStart="@dimen/dim_15dp"
                android:textColorHint="@color/orange_transparent"
                android:textColor="@color/orange"/>

            <Button
                android:id="@+id/contact_us_fragment_btn_msg_send"
                android:layout_width="@dimen/dim_150dp"
                android:layout_height="@dimen/dim_35dp"
                android:background="@drawable/shape_button_red"
                android:layout_marginTop="@dimen/dim_15dp"
                android:layout_marginBottom="@dimen/dim_15dp"
                android:text="@string/send"
                android:textColor="@color/white"/>


        </LinearLayout>

    </ScrollView>




</LinearLayout>